@@ -1,3 +1,9 @@
+Changes with melon 2.6.0                                          21 Nov 2022
+    *) Fixed bug of lang pipe send function
+    *) Optimized callback function about lang task exit
+    *) Optimized string macros
+    *) Added trace mode
+
 Changes with melon 2.5.6                                          20 Nov 2022
     *) Removed no-use macro
     *) Optimized  log component
